# FinancialIntelligencePlatform

./: .replit  README.md  api.py  database.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-Create-a-real-time-interactive-data-visualization-of-the-S-P-100-focusing-on-market-capitalization-1734798280801.txt  Pasted-Design-and-implement-a-Market-Sentiment-Dashboard-that-aggregates-and-visualizes-various-data-source-1734800983501.txt
components/: charts.py  institutional_ownership.py  portfolio.py  prediction.py  sentiment_dashboard.py  sp100_view.py  trading.py  watchlist.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: MarketSentiment.js  Portfolio.js  SP100View.js  Trading.js  Watchlist.js
frontend/src/components/auth/: Login.js
frontend/src/components/layout/: Navbar.js
frontend/src/contexts/: AuthContext.js
utils/: __init__.py  company_matcher.py  sec_data.py  sentiment_analyzer.py
