[project]
name = "repl-nix-stockswift"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "components>=0.0.1a0",
    "fuzzywuzzy>=0.18.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "python-levenshtein>=0.26.1",
    "scikit-learn>=1.6.0",
    "streamlit>=1.41.1",
    "yfinance>=0.2.51",
]
